--- a/photoApp/templates/detail.html
+++ b/photoApp/templates/detail.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
-
+{% load static %} 
 {% load crispy_forms_tags %}
 
 {% block content %}
 <div class="container mx-auto">
         <div class="card ">
-            <img src="{{photos.image.url}}" class="card-img-top" alt="...">
+            <h6>Image Name - {{privateURL}} </h6>
+            <img src="{{privateURL}}" class="card-img-top" alt="...">
         </div>
 </div>
 {% endblock %}
