Added Working Files

--- a/photoApp/templates/detail.html
+++ b/photoApp/templates/detail.html
@@ -6,7 +6,7 @@
 <div class="container mx-auto">
         <div class="card ">
             <h6>Image Name - {{privateURL}} </h6>
-            <img src="{{privateURL}}" class="card-img-top" alt="...">
+            <img src="{{safeURLs}}" class="card-img-top" alt="...">
         </div>
 </div>
 {% endblock %}
